@@ -2,6 +2,8 @@ Beaker Changelog
 ================
 
 0.9.1 (**tip**)
+* Fixed memcached code to use delete_multi on clearing the keys for efficiency
+  and updated key retrieval to properly store and retrieve None values.
 * Removing cookie.py and signed cookie middleware, as the environ_key option
   for session middleware provides a close enough setting.
 * Added option to use just cookie-based sessions without requiring
